<resources>
    <string name="todo_app_header_title">TODO</string>

    <string name="todo_filter_all">All</string>
    <string name="todo_filter_today">Today</string>
    <string name="todo_filter_completed">Completed</string>

    <string name="todo_header_all_title">All Tasks</string>
...
    <string name="todo_header_completed_symbol">✓</string>

    <string name="todo_priority_low">Low</string>
    <string name="todo_priority_medium">Medium</string>
    <string name="todo_priority_high">High</string>

    <string name="todo_editor_title_new_task">New Task</string>
    <string name="todo_editor_task_description">TASK DESCRIPTION</string>
    <string name="todo_editor_task_placeholder">What needs to be done?</string>
    <string name="todo_editor_select_due_date">Select due date</string>
    <string name="todo_editor_select_due_time">Select due time</string>
    <string name="todo_editor_priority_label">PRIORITY</string>
    <string name="todo_editor_reminder_label">REMINDER</string>
...
